--- a/silverspecs/index.html
+++ b/silverspecs/index.html
@@ -3,247 +3,121 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Silver Specs</title>
-    <link rel="stylesheet" href="./static/css/bootstrap.min.css"/>
-    <script src="./static/js/jquery-3.4.0.min.js"></script>
-    <script src="./static/js/bootstrap.min.js"></script>
-    <link href="./static/css/base.css" rel="stylesheet">
+    <title>Home | Silver Specs Eye Care + Optical</title>
+    <link rel="stylesheet" href="static/css/bootstrap.min.css"/>
+    <script src="static/js/jquery-3.4.0.min.js"></script>
+    <script src="static/js/bootstrap.min.js"></script>
+    <link href="static/css/base.css" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    <link href="https://fonts.googleapis.com/css?family=Lato|Raleway&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,700;1,300&display=swap" rel="stylesheet">
 </head>
 <body>
-<nav class="navbar fixed-top navbar-light bg-light navbar-expand-lg">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav mx-auto noselect">
-            <a class="navbar-brand" href="./index.html">Silver Specs</a>
-            <li class="nav-item"><a class="nav-link" href="#TODOBOOKLINK">Book Appointment</a></li>
-            <li class="my-auto text-center divider"> | </li>
-            <li class="nav-item"><a class="nav-link" href="./services">Services</a></li>
-            <li class="my-auto text-center divider"> | </li>
-            <li class="nav-item"><a class="nav-link" href="#about">About Us</a></li>
-            <li class="my-auto text-center divider"> | </li>
-            <li class="nav-item"><a class="nav-link" href="./location">Location</a></li>
-            <li class="my-auto text-center divider"> | </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="patientInfoDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Patient Information
-                </a>
-                <div class="dropdown-menu" aria-labelledby="patientInfoDropdown">
-                    <a class="dropdown-item" href="#guarantee">Guarantee</a>
-                    <a class="dropdown-item" href="./patient-information/contact-lens-fitting.html">Contact Lens Fitting</a>
-                    <a class="dropdown-item" href="#faq">Frequently Asked Questions</a>
-                </div>
-            </li>
-        </ul>
-    </div>
-</nav>
-<div class="container-fluid hero pt-5">
-    <div class="row col-sm-12 controls">
-        <div class="col-sm-4 text-center">
-            <a class="btn btn-standard" href="#TODOBOOKLINK">Book Appointment</a>
-        </div>
-        <div class="col-sm-4 text-center">
-            <a class="btn btn-standard" href="./services">Services</a>
-        </div>
-        <div class="col-sm-4 text-center">
-            <a class="btn btn-standard" href="./location">Location & Hours</a>
-        </div>
-    </div>
-</div>
-<div id="services" class="container-fluid p-5">
-    <div class="row">
-        <div class="col-md-4 d-flex align-items-stretch mb-3">
-            <div class="card shadow w-100">
-                <div class="card-body">
-                    <h5 class="card-title">Comprehensive Eye Exams</h5>
-                    <hr>
-                    <p class="card-text">
-                        Complete assessment of the eyes; it's more than just glasses
-                    </p>
-                    <p class="font-italic small">
-                        Pediatric (18 and under) and senior (65 and over) eye exams are covered by Alberta Health Care.
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex align-items-stretch mb-3">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h5 class="card-title">Medical Eye Exams</h5>
-                    <hr>
-                    <p class="card-text">
-                        Medically necessary eye exams are covered by Alberta Health Services. Just inform us of the nature of your visit.
-                    </p>
-                    <p class="font-italic small">
-                        Be sure to bring your Alberta Health Care Insurance Number. Unsure if your visit will be covered? <a class="card-href" href="https://www.optometrists.ab.ca/web/AAO/Patients/Vision_Care_Coverage/AAO/Patients/Vision_Care_Costs.aspx"><span class="font-weight-bold">Check out Alberta Health Care's Vision Care Coverage.</span></a>
-                    </p>
-                </div>
-            </div>
-        </div>
-        <div class="col-md-4 d-flex align-items-stretch mb-3">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h5 class="card-title">Contact Lenses</h5>
-                    <hr>
-                    <p class="card-text">
-                        Contact lenses are a great way to see. Let us know if you are interested in a contact lens check.
-                    </p>
-                    <p class="font-italic small"> Additional fees may apply. Be sure to let us know while booking, during check-in, or with the doctor.</p>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="container text-center p-3">
-            <p>We also offer other services like occupational and drivers vision testing.</p>
-            <div class="col-sm-4 offset-sm-4">
-                <a href="./services" class="btn btn-standard">
-                    View Services
-                </a>
-            </div>
-        </div>
-    </div>
-</div>
-<div>
+    <nav id="navigation" class="navbar navbar-expand-lg navbar-light pb-5"></nav>
 
-</div>
-<div id="faq" class="parallax-landing parallax">
-    <div class="col-md-12">
-        <div class="card">
-            <div class="card-body">
-                <h3 class="card-title">Frequently Asked Questions</h3>
-                <hr>
-                <h5>Will the exam hurt?</h5>
-                <p>Our procedures are non-invasive and will cause minimal to no pain. Some patients may notice a mild stinging with eye drops, but will only feel the sting for 5-10 seconds.</p>
-                <h5>What is dilation?</h5>
-                <p>Dilation uses eye drops to cause the pupils (the coloured parts of the eye) to become larger allowing more light into the eye. This allow the doctors to have a better view to the back of the eye. Your doctor will suggest whether or not you will need to dilate on that visit and explain to you what to expect and how long it will take to recover.</p>
-                <h5>How long will the exam take?</h5>
-                <p>Generally, an eye exam will take between 15-20 or more minutes depending on the reason for visit. Please allow for 30-45 minutes including check in and check out.</p>
-                <h5>What happens to the information you collect?</h5>
-                <p>Your privacy is important to us. All information is protected in secured and password protected facilities and kept for a minimum of 10 years. Data is backed up onto secure drives in case of computer failures.</p>
-                <h5>Do you use the eye-puff machine?</h5>
-                <p>Yes, as a screening instrument, we use the eye-puff machine (non-contact tonometer) to measure the pressure of the eyes. This is important for conditions including glaucoma. If requested, we can use other methods of measurement for your comfort.</p>
-                <h5>What is an OCT?</h5>
-                <p>OCT stands for Optical Coherence Tomographer. Our unit, the 3D Maestro 1 by Topcon, also has retinal photography built in. What all those words mean is that we are able to take high resolution cross section scans of the retina to allow for early detection and monitoring of many diseases including glaucoma, macular degeneration, diabetic retinopathy, and other conditions that may affect your eye health.</p>
-            </div>
-        </div>
+    <div class="container pb-5">
+        <h1 class="font-large text-center">SILVER SPECS</h1>
+        <h1 class="font-large text-center">EYE CARE + OPTICAL</h1>
+        <h4 class="text-center">Your local Coaldale Optometrist</h4>
     </div>
-</div>
-<div id="guarantee" class="container pt-5 pb-5">
-    <div class="row">
-        <div class="col-md-6">
-            <div class="card shadow">
-                <div class="card-body">
-                    <h3 class="card-title">Our 90 Day Guarantee</h3>
-                    <hr>
-                    <p>We are committed to providing you with the most accurate prescription possible. However, we recognize that eyes, like the rest of the body, are dynamic structures and prescriptions can change from time to time. We guarantee your prescriptions accuracy for 90 days after your initial visit. If you are not completely satisfied with your vision, we will be happy to recheck your prescription at no extra charge. Any rechecks or visits after the 90 days may be charged the usual and customary fees. As our clinic does not produce lenses or fill prescriptions, please check with the optical you choose for their policy on remakes.</p>
+
+    <div id="carousel-1" class="carousel slide multi-item-carousel pb-5" data-ride="carousel">
+        <div class="carousel-inner" role="listbox">
+            <div class="carousel-item active">
+                <div class="item__third">
+                    <img src="./static/img/c1.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="item__third">
+                    <img src="./static/img/c2.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="item__third">
+                    <img src="./static/img/c3.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="item__third">
+                    <img src="./static/img/c4.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="item__third">
+                    <img src="./static/img/c5.png" alt="">
+                </div>
+            </div>
+            <div class="carousel-item">
+                <div class="item__third">
+                    <img src="./static/img/c6.png" alt="">
                 </div>
             </div>
         </div>
-        <div id="guarantee-img" class="col-md-6">
-        </div>
     </div>
-</div>
-<div id="about" class="container pb-5">
-    <div class="row">
-        <div class="col-md-12">
-            <h3 class="card-title">Meet Our Optometrist</h3>
-        </div>
-        <div class="col-md-6 mb-3">
-            <img class="img-fluid" src="./static/img/dan-mark-cuevas.jpg" />
-        </div>
-        <div class="col-md-6">
-            <p>Dr. Dan Mark Cuevas graduated from Harry Ainlay Composite High School in Edmonton, AB in 2005. He began university in the fall of that same year at the University of Alberta. After 2 years at the U of A, Dr. Cuevas trasferred to  the University of Waterloo in Waterloo, Ontario where he graduated with a B.Sc in Honours Biomedical Sciences in 2010.</p>
-            <p>Dr. Cuevas began his formal optometric education in August 2010 at the Arizona College of Optometry at Midwestern University in Glendale, Arizona and graduated May of 2014. While there he served as the class historian, and treasurer for the Lions Club at the University. He was also involved in academic research involving the measurement of dynamic visual acuity and has presented 2 academic posters at the American Academy of Optometry.</p>
-            <p>During his free time he enjoys playing the piano and guitar, hiking, snowboarding, and taking photographs of the adventures in between.</p>
-        </div>
-    </div>
-</div>
 
-<div id="footer" class="container-fluid pt-2">
-    <div class="row col-md-12">
-        <div class="col-md-4 mb-2">
-            <h3 class="font-weight-bold">Silver Specs</h3>
-            <p>A blurb about the things about Silver Specs</p>
+    <div class="container pb-5 text-center">
+        <div class="col-xs-3 offset-xs-6">
+            <h1 class="pb-4">WHO WE ARE</h1>
+            <h5 class="pb-4">Your local family optometrist.</h5>
+            <p class="pb-3">Established in 2020, Silver Specs Eye Care + Optical strives to be your choice for a local, family friendly optometrist and optical for all of your eye care needs.</p>
+            <p class="pb-3">Whether you need a new pair of specs, a contact lens fit, or an urgent eye care visit because of a spec in your eye, we are here to help.</p>
+            <p class="pb-3">Stop by to say hello, give us a call, or message us through Facebook or Google and we will do our best to help you.</p>
         </div>
-        <div class="col-md-4 mx-auto mb-3">
-            <h5 class="font-weight-bold">Contact Information</h5>
-            <div id="contactBlock" class="mb-2">
-                <p><i class="fas fa-globe"></i> #2-1814 20 Ave</p>
-                <p class="pl-4">Coaldale, AB</p>
+    </div>
+
+    <div class="container-fluid p-0 pb-5">
+        <img class="cover" src="./static/img/cover-home.png" />
+    </div>
+
+    <div class="container-fluid p-5">
+        <div id="contactBlock" class="row pb-5">
+            <div class="col-lg-6 pl-5 pt-5 pr-0 text-center">
+                <h1 class="pb-4 boldish">CONTACT US</h1>
+                <p>Unit C: 1814 20 Ave</p>
+                <p>Coaldale, AB T1M 1K8</p>
+                <p>info@silverspecs.com</p>
+                <p>(403) 345-9801</p>
+            </div>
+            <div class="col-lg-6 pr-5 pt-5 pl-0">
+                <form id="contactForm" class="needs-validation" novalidate>
+                    <div class="mb-3">
+                        <input type="text" class="form-control form-name contact-form-ele" id="name" placeholder="Name" value="" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="email" class="form-control form-email contact-form-ele" id="emailAddress" placeholder="Email address" required>
+                        <div class="valid-feedback">
+                            Looks good!
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <input type="text" class="form-control form-subject contact-form-ele" id="subject" placeholder="Subject">
+                    </div>
+                    <div class="form-group">
+                        <textarea class="form-control form-message contact-form-ele" id="message" rows="3" placeholder="Type your message here..."></textarea>
+                    </div>
+                    <button id="sendBtn" class="btn btn-primary btn-lg btn-block" type="submit">Send</button>
+                </form>
             </div>
         </div>
-        <div class="col-md-4">
-            <h5 class="font-weight-bold">
-                Clinic Hours
-            </h5>
-            <table class="table">
-                <tbody>
-                <tr>
-                    <td>
-                        Monday
-                    </td>
-                    <td>
-                        Closed
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Tuesday
-                    </td>
-                    <td>
-                        9:00am - 5:30pm
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Wednesday
-                    </td>
-                    <td>
-                        9:00am - 5:30pm
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Thursday
-                    </td>
-                    <td>
-                        11:00am - 7:30pm
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Friday
-                    </td>
-                    <td>
-                        9:00am - 5:30pm
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Saturday
-                    </td>
-                    <td>
-                        9:00am - 1:00pm
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        Sunday
-                    </td>
-                    <td>
-                        Closed
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            * Closed on Holidays
+        <div class="row">
+            <iframe width="100%" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2579.1026491541543!2d-112.62269998429467!3d49.72769337938224!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x536e81d63e0aebb7%3A0x8566ac9846c638a6!2s1814%2020th%20Ave%20Unit%20C%2C%20Coaldale%2C%20AB%20T1M%201K8!5e0!3m2!1sen!2sca!4v1604306034901!5m2!1sen!2sca" width="600" height="450" frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
         </div>
     </div>
-    <div class="footer-copyright text-center py-3 small">© 2020 by DM Cuevas Professional Optometry Corporation. Created by <a target="_blank" href="http://www.czmoody.com">CZMoody</a>.
-    </div>
-</div>
-<script src="./static/js/base.js"></script>
+
+    <div id="footer" class="container-fluid"></div>
+    <script>
+        var THIS_NAV = "home";
+        var ROOT_PATH = ".";
+        var STATIC_PATH = "./static/";
+
+        $('.carousel').carousel({
+            interval: 2000
+        });
+    </script>
+    <script src="./static/js/base.js"></script>
+    <script src="./static/js/contact-us.js"></script>
 </body>
 </html>
